<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DialogUser.InfoDialogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DeepKoamaru"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#FFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/lastname"
                    android:textColor="#FFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_person_black"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/dni" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/phone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHomeType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_home_black"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey01" />

                <TextView
                    android:id="@+id/txtAmountOfPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_people"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey02" />

                <TextView
                    android:id="@+id/txtOtherPets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_pets_black"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey03" />

                <TextView
                    android:id="@+id/txtOtherPetsType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_pets_black"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey04" />

                <TextView
                    android:id="@+id/txtWorkType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_work"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey05" />

                <TextView
                    android:id="@+id/txtTimeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_time"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/titlesurvey06" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>