<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.pawapp.Fragments.PetFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imgPet"
                    android:layout_width="0dp"
                    android:layout_height="95dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pet_icon" />

                <Button
                    android:id="@+id/btnPetImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/petimage" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/petname">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/PetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/petage">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/PetAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/petdes">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/PetDes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top|start"
                    android:inputType="text"
                    android:lines="10"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spnTypes"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="Tipo de mascota"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="15sp"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spnRaces"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="Raza de la mascota"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="15sp"
                app:met_floatingLabel="normal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPetRace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Raza">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPetRace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnPetInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/petreg" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>